# UniformSamplingOnSO3

./: README.md
UniformSamplingOnSO3/: CMakeLists.txt
UniformSamplingOnSO3/Code/: Configuration.h  connectLayeredGrids.cpp  generateRfromQuaternion.cpp  grid_generation.h  grid_s1.cpp  hopf2quat.cpp  layered_grid.cpp  main.cpp  mk_pix2xy.cpp  nside2npix.cpp  pix2ang_nest.cpp  simple_grid.cpp
UniformSamplingOnSO3/Output/L0/: degreeID.csv  degreeID.txt  quaternionID.csv  quaternionID.txt  radianID.csv  radianID.txt
UniformSamplingOnSO3/Output/L1/: degreeID.csv  degreeID.txt  quaternionID.csv  quaternionID.txt  radianID.csv  radianID.txt
UniformSamplingOnSO3/Output/L2/: degreeID.csv  degreeID.txt  quaternionID.csv  quaternionID.txt  radianID.csv  radianID.txt
UniformSamplingOnSO3/Output/L3/: degreeID.csv  degreeID.txt  quaternionID.csv  quaternionID.txt  radianID.csv  radianID.txt
UniformSamplingOnSO3/UniformSamplingSO3/L0/R/00000/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+32 more)
UniformSamplingOnSO3/UniformSamplingSO3/L0/nextID/00000/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  (+38 more)
(+1152 files in other folders)
